--- a/templates/layout.html
+++ b/templates/layout.html
@@ -195,7 +195,7 @@
                                 <div class="alert-content">
                                     <h6 style ="display:inline-block;">{{ message }}</h6>
                                     <a href="javascript:close_alert()">
-                                        <svg class="svg-icon fill-only" style="width:15px; height:15px; stroke:var(--black); float:right" onclick="close_popup('options')">
+                                        <svg class="svg-icon close-bttn">
                                             <use xlink:href="#close2"/>
                                         </svg>
                                     </a>
