--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -2,10 +2,6 @@ label {
     font-size: smaller;
 }
 
-.input_group {
-
-}
-
 .simple-row {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -66,6 +62,7 @@ form.box {
 .image-submit svg.svg-icon {
     width: inherit;
     height: inherit;
+    padding: 3pt;
 }
 
 .image-submit form {
@@ -91,20 +88,35 @@ form.box {
     transform:rotate(10deg);
 }
 
+.add-button {
+    fill: none;
+    stroke: var(--black);
+    color:var(--black);
+}
+
+.add-button:hover, .add-button:focus, .add-button:active {
+    fill: var(--accent-fade);
+    color: var(--accent);
+}
+
+
+input:focus {
+    outline:none;
+}
 /* .image-submit:hover svg.svg-icon .image-submit:focus svg.svg-icon .image-submit:active svg.svg-icon{
     stroke: var(--black);
     fill: white;
 } */
 
 
-.switch {
+/* .switch {
   position: relative;
   display: inline-block;
   width: 60px;
   height: 34px;
-}
+} */
 
-.switch input {
+/* .switch input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -147,13 +159,17 @@ input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
-}
+} */
 
-input:focus {
-    outline: none;
+input[type="file"]:focus, input[type="text"]:focus {
     border-style: solid;
     border-color:var(--accent);
 }
+
+/* input[type=range]:focus {
+    outline: none;
+} */
+
 
 input[type="file"] {
     background-color: #ffffff;
