--- a/templates/my_bookmarks.html
+++ b/templates/my_bookmarks.html
@@ -23,12 +23,25 @@
                 <div class="stuff-grid" action="home_" method="get">
                 {% if content %}
                     {% for item in content %}
-                        <div class="cards-container small">
-                            <form class="" action="/my_bookmarks" method="post">
-                                <input type="hidden" name="id" value="{{ item['id'] }}">
-                                <input type="submit" name="action" value="delete">
-                                <input type="submit" name="action" value="upload drawing">
-                            </form>
+                        <div class="cards-container small" style="padding-top:0;">
+                            <div style="display:flex; align-self:flex-end;"">
+                                <form class="" action="/my_bookmarks" method="post">
+                                    <input type="hidden" name="id" value="{{ item['id'] }}">
+                                    <div class="image-submit" style="display:inline-block;">
+                                        <input type="submit" name="action" value="upload drawing">
+                                        <svg class="svg-icon fill-cut smaller">
+                                            <use xlink:href="#upload"/>
+                                        </svg>
+                                    </div>
+                                    <div class="image-submit" style="display:inline-block;">
+                                        <input type="submit" name="action" value="delete">
+                                        <svg class="svg-icon fill-cut smaller">
+                                            <use xlink:href="#trash"/>
+                                        </svg>
+                                    </div>
+                                </form>
+                            </div>
+                            
                             {% for card in item['cards'] %}
                                 <div class="cards small">
                                     <h6>{{ card }}</h6>
