--- a/templates/my_uploads.html
+++ b/templates/my_uploads.html
@@ -1,12 +1,12 @@
 {% extends "home_layout.html" %}
 
 {% block pop_up%}
-    <div id="upload" class="content-grid pop-up" style="display:none" autofocus>
+    <div id="upload" class="content-grid pop-up" autofocus>
 
         <div class="inner-header in-dialogue">
             <h5> upload image </h5>
             <a href="javascript:close_dialogue('upload')">
-                <svg class="svg-icon fill-only" style="width:15px; height:15px; stroke:var(--black); float:right" onclick="close_popup('options')">
+                <svg class="svg-icon close-bttn">
                     <use xlink:href="#close2"/>
                 </svg>
             </a>
@@ -39,7 +39,17 @@
         </div>
             <div class="inner-main">
                 <div class="gallery-grid small" action="home_" method="get">
-                    <a href="javascript:open_dialogue('upload')">
+
+                    <div class="center-content">
+                        <a href="javascript:open_dialogue('upload')" class="add-button" style="padding: 1em;">
+                            <svg style="height: 50pt; width: 50pt; stroke-width: 1.2pt; padding: .3em; stroke: inherit; fill: inherit;">
+                                <use xlink:href="#add_button"/>
+                            </svg>
+                            <h6>upload image!</h6>
+                        </a>
+                    </div>
+
+                    <!-- <a href="javascript:open_dialogue('upload')">
                         <div class="gallery-item small">
                             <div class="image-container small center-content">
                                     <svg class="svg-icon">
@@ -47,11 +57,12 @@
                                     </svg>
                                     <h6>add new!</h6>
                             </div>
+
                             <div class="gallery-details small">
-                                <!-- empty -->
+
                             </div>
                         </div>
-                    </a>
+                    </a> -->
                 {% if content %}
                     {% for item in content %}
                         {% if item['path']%}
